--- a/front/style.scss
+++ b/front/style.scss
@@ -6,25 +6,48 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  .board-container {
-    .board-box-row {
+  .gameboard-ui {
+    width: 100%;
+    height: 100%;
+    .board-container {
+      width: 100%;
+      height: 100%;
+      .board-box-row {
+        display: flex;
+        .board-box {
+          width: 30px;
+          height: 30px;
+          border: solid 0.5px black;
+        }
+
+        .board-box.owner-1p {
+          background-color: red;
+        }
+
+        .board-box.owner-2p {
+          background-color: blue;
+        }
+
+        .board-box.owner-pre-1p {
+          background-color: rgba($color: (#FF0000), $alpha: 0.1);
+        }
+
+      }
+    }
+
+    .mino-sel-btn-container {
+      border: solid 0.5px black;
       display: flex;
-      .board-box {
-        width: 30px;
-        height: 30px;
+      flex-direction: row;
+      .mino-sel-btn {
         border: solid 0.5px black;
-      }
-
-      .board-box.owner-1p {
-        background-color: red;
-      }
-
-      .board-box.owner-2p {
-        background-color: blue;
-      }
-
-      .board-box.owner-pre-1p {
-        background-color: rgba($color: (#FF0000), $alpha: 0.1);
+        width: 100px;
+        height: 100px;
+        img {
+          width: 90px;
+          height: 90px;
+          margin: 0px auto;
+        }
       }
     }
   }
