--- a/front/src/css/output.css
+++ b/front/src/css/output.css
@@ -531,6 +531,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-20 {
   margin-top: 5rem;
 }
@@ -587,16 +591,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 5rem;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
 .h-\[80px\] {
   height: 80px;
 }
 
 .h-full {
   height: 100%;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .w-\[35px\] {
@@ -639,10 +643,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 80px;
 }
 
-.w-\[200px\] {
-  width: 200px;
-}
-
 .min-w-\[1210px\] {
   min-width: 1210px;
 }
@@ -667,12 +667,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(11, minmax(0, 1fr));
 }
 
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -775,8 +775,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-repeat: no-repeat;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-6xl {
